исправлен дизайн, добавлено много кода jquery для облегчения жизни контроллера

--- a/MvcApplication2/Views/Home/EditTaskWindow.cshtml
+++ b/MvcApplication2/Views/Home/EditTaskWindow.cshtml
@@ -2,11 +2,11 @@
 <div class="modal-content">
     <div class="modal-header">
         <button class="close" data-dismiss="modal" area-hidden="true">X</button>
-        <h1>Добавление задачи</h1>
+        <h1>Редактирование задачи</h1>
     </div>
     <div class="modal-body">
         <div>
-            @using (Ajax.BeginForm("UpdateTask", new AjaxOptions { UpdateTargetId = "childdiv" + Model.Task_Id, InsertionMode = InsertionMode.Replace, OnSuccess = "$('#modDialog').modal('hide');" }))
+            @using (Ajax.BeginForm("UpdateTask", new AjaxOptions { UpdateTargetId = "task" + Model.Id, InsertionMode = InsertionMode.Replace, OnSuccess = "$('#modDialog').modal('hide');" }))
             {
                 Html.EnableClientValidation(true);
                 Html.EnableUnobtrusiveJavaScript(true);
@@ -17,7 +17,7 @@
                 </div>
                 <div class="editor-field">
                     <label for="Deadline">Срок выполнения до:</label>
-                    <input type="text" value="@Model.Deadline" data-val="true" data-val-required="Укажите дату." class="form-control" id="dpd2" data-date="12-02-2012" data-date-format="dd.mm.yyyy" name="Deadline" />
+                    <input type="text" value="@Model.Deadline" data-val="true" data-val-required="Укажите дату." class="form-control" id="dpd2" data-date="12-02-2012" data-date-format="mm.dd.yyyy" name="Deadline" />
                     <span class="field-validation-valid" data-valmsg-for="Deadline" data-valmsg-replace="true"></span>
                 </div>
                 <div>
@@ -36,12 +36,7 @@
                 </div>
 
                 <div>
-                    <label for="State">Состояние:</label>
-                    <select class="form-control" name="State">
-                        <option value="Active">Активна</option>
-                        <option value="Resolved">Решена</option>
-                        <option value="Closed">Закрыта</option>
-                    </select>
+                    <input type="hidden" name="State" value="@Model.State" />
                 </div>
 
 
