--- a/MvcApplication2/Views/Home/NewTaskWindow.cshtml
+++ b/MvcApplication2/Views/Home/NewTaskWindow.cshtml
@@ -48,10 +48,9 @@
 </div>
 <script>
     
-    $('#dpd1').datepicker({
-        startDate: "today"
-    });
+
 
 </script>
 
     @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/newtask");
